--- a/.editorconfig
+++ b/.editorconfig
@@ -50,7 +50,7 @@ csharp_preserve_single_line_blocks = false
 #Style - Code block preferences
 
 #prefer curly braces even for one line of code
-csharp_prefer_braces = true:suggestion
+csharp_prefer_braces = true:none
 
 #Style - expression bodied member options
 
