--- a/.gitignore
+++ b/.gitignore
@@ -7,3 +7,10 @@ MoreFlyout.Shell.Core/obj/
 MoreFlyout.Shell/bin/
 MoreFlyout.Shell/obj/
 .vs/
+MoreFlyout.Server/Properties/PublishProfiles/win10-x64.pubxml.user
+MoreFlyout.Server/Properties/PublishProfiles/FolderProfile.pubxml.user
+MoreFlyout.Server/Generated Files/
+MoreFlyout.Server/Properties/PublishProfiles/win-x64.pubxml.user
+MoreFlyout.Server/MoreFlyout.Server.csproj.user
+MoreFlyout.Shell/Properties/PublishProfiles/win-x64.pubxml.user
+MoreFlyout.Shell/MoreFlyout.Shell.csproj.user
