--- a/MoreFlyout.Shell.Core/MoreFlyout.Shell.Core.csproj
+++ b/MoreFlyout.Shell.Core/MoreFlyout.Shell.Core.csproj
@@ -7,10 +7,11 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Folder Include="Helpers\" />
     <Folder Include="Models\" />
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Newtonsoft.Json" Version="13.0.2" />
+    <PackageReference Include="Newtonsoft.Json" Version="13.0.3" />
   </ItemGroup>
 </Project>
