Feature: Added support for x86 and arm64

--- a/.gitignore
+++ b/.gitignore
@@ -15,3 +15,6 @@ MoreFlyout.Server/MoreFlyout.Server.csproj.user
 MoreFlyout.Shell/Properties/PublishProfiles/win-x64.pubxml.user
 MoreFlyout.Shell/MoreFlyout.Shell.csproj.user
 MoreFlyout.Shell/Properties/PublishProfiles/win-x86.pubxml.user
+MoreFlyout.Server/Properties/PublishProfiles/win-arm64.pubxml.user
+MoreFlyout.Server/Properties/PublishProfiles/win-x86.pubxml.user
+MoreFlyout.Shell/Properties/PublishProfiles/win-arm64.pubxml.user
