--- a/MoreFlyout.Shell/MoreFlyout.Shell.csproj
+++ b/MoreFlyout.Shell/MoreFlyout.Shell.csproj
@@ -15,7 +15,7 @@
 	  <UseWinUI>true</UseWinUI>
     <EnableMsixTooling>true</EnableMsixTooling>
     <WindowsAppSDKSelfContained>true</WindowsAppSDKSelfContained>
-		<PublishAot>false</PublishAot>
+		<PublishAot>true</PublishAot>
   </PropertyGroup>
 
 	<ItemGroup>
@@ -34,6 +34,7 @@
     <PackageReference Include="CommunityToolkit.Mvvm" Version="8.3.2" />
     <PackageReference Include="CommunityToolkit.WinUI.Controls.SettingsControls" Version="8.1.240916" />
     <PackageReference Include="Microsoft.Extensions.Hosting" Version="8.0.0" />
+    <PackageReference Include="Microsoft.Windows.CsWinRT" Version="2.1.5" />
     <PackageReference Include="Microsoft.WindowsAppSDK" Version="1.6.240923002" />
     <PackageReference Include="Microsoft.Xaml.Behaviors.WinUI.Managed" Version="2.0.9" />
     <PackageReference Include="WinUIEx" Version="2.4.2" />
